syntax = "proto3";

package api;

import "result.proto";

option go_package = "./;api";

service UserService {
  rpc Register (UserRegisterReq) returns (Result) {}
  rpc Login (UserLoginReq) returns (Result) {}
}

message UserInfo {
  int64 id = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
  string ext = 5;
}

message UserLoginReq {
  string username = 1;
  string password = 2;
  int32 appId = 3;
  int32 deviceType = 4;
}

message UserLoginResp {
  string token = 1;
  UserInfo userInfo = 2;
}

message UserRegisterReq {
  string username = 1;
  string  password = 2 ;
  string nickname = 3;
  string avatar = 4;
  string phone = 5;
  // json格式扩展字段
  string ext = 6;
  int32 appId = 7;
  int32 deviceType = 8;
}

message UserRegisterResp {
  int64 uid = 1;
}

message FileUploadResp {
  string url = 1;
}